--- a/style.css
+++ b/style.css
@@ -4,62 +4,137 @@
     padding: 0;
     font-family: "Poppins", sans-serif;
     font-size: 16px;
-  }
-  
-  body {
+}
+
+body {
     width: 100%;
-    display: flex;
     flex-direction: column;
     align-items: center;
-  }
-  
-  #blocPrincipal {
+}
+
+#blocPrincipal {
     width: 100%;
     max-width: 2000px;
-  }
-  
-  .ecran {
+}
+
+.ecran {
     height: 92vh;
     width: 100%;
     display: flex;
-  }
-  
-  section {
+}
+
+section {
     height: 100%;
     width: 80%;
     display: flex;
     justify-content: center;
     align-content: center;
     align-items: center;
-  }
-  
-  /* ecran 1 */
-  .ecran1 {
+}
+
+/* ecran 1 */
+.ecran1 {
+    width: 100%;
+
+
+
+}
+
+header {
     width: 100%;
     background-color: #fff;
-  }
-  
-  /* ecran 2 */
-  .ecran2 {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    align-content: center;
+    border: 10px solid#fc00000e;
+
+}
+
+h3 {
+    color: rgb(4, 3, 10);
+    text-align: center;
+    align-items: center;
+    flex: content;
+
+
+
+}
+
+P {
+    text-align: center;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+
+}
+
+/* ecran 2 */
+.ecran2 {
     width: 100%;
-  }
-  
-  /* ecran 3*/
-  .ecran3 {
+    background-color: cyan;
+
+}
+
+/* ecran 3*/
+.ecran3 {
     width: 100%;
-  }
-  
-  /* ecran 4*/
-  .ecran4 {
+    background-color: darkorange;
+    margin: 2px;
+}
+
+/* ecran 4*/
+.ecran4 {
     width: 100%;
-  }
-  
-  /* ecran 5*/
-  .ecran5 {
+    background-color: rgb(138, 100, 157);
+}
+
+/* ecran 5*/
+.ecran5 {
     width: 100%;
-  }
-  
-  /* ecran 6*/
-  .ecran6 {
+    background-color: deeppink;
+}
+
+/* ecran 6*/
+.ecran6 {
     width: 100%;
-  }
+    background-color: rgb(192, 111, 91);
+
+}
+
+/* menu navigation */
+nav {
+    height: 100px;
+}
+
+ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    height: 100%;
+    list-style: none;
+
+}
+
+li {
+    margin: 0 10px;
+}
+
+img {
+    width: 100%;
+}
+
+.savoir {
+    width: 800px;
+    height: auto;
+}
+
+.photo {
+    position: absolute;
+    width: 100px;
+    height: 200px;
+    top: 10px;
+    left: 0;
+}
