--- a/style.css
+++ b/style.css
@@ -3,13 +3,15 @@
     margin: 0;
     padding: 0;
     font-family: "Poppins", sans-serif;
-    font-size: 16px;
+    font-size: 1.2rem;
 }
+
 
 body {
     width: 100%;
     flex-direction: column;
     align-items: center;
+    border: solid 0.5px rgb(4, 4, 4);
 }
 
 #blocPrincipal {
@@ -18,10 +20,11 @@ body {
 }
 
 .ecran {
-    height: calc(100vh - 100px);
+    height: 100vh;
     width: 100%;
     display: flex;
     border-radius: 10%;
+    flex-direction: column;
 }
 
 section {
@@ -35,13 +38,13 @@ section {
 
 header {
     width: 100%;
-    height: calc(100vh - 100px);
-    background-color: rgba(188, 179, 177, 0.512);
+    height: 25vh;
+    background-color: silver;
     display: flex;
     justify-content: space-around;
     align-items: center;
     align-content: center;
-    border: 10px solid#fc00000e;
+    border-radius: 100px;
 
 }
 
@@ -59,7 +62,8 @@ header {
     border-radius: 50%;
 
 }
-h2{
+
+h2 {
     text-align: center;
     align-items: center;
     flex: content;
@@ -75,6 +79,7 @@ h3 {
     text-align: center;
     align-items: center;
     flex: content;
+
 }
 
 P {
@@ -83,33 +88,35 @@ P {
     display: flex;
     justify-content: center;
     text-align: center;
-
 }
 
-/* ecran 1 */
+/* -------------------------------------------------------- ecran 1 ------------------------------------------------ */
 .ecran1 {
     display: flex;
     justify-content: center;
     align-items: center;
+
     align-content: center;
     width: 100%;
     background-color: #8f89899b;
-    
+
+    background-color: silver;
 }
-.ecran1 .savoir{
+
+.ecran1 .savoir {
     width: 100%;
+    background-color: silver;
+    border-radius: 100px;
 }
 
-
-
-
-/* ecran 2 */
+/* -------------------------------------- ecran 2-------------------------------------------- */
 .ecran2 {
     width: 100%;
-    background-color: #8f89899b;
+    background-color: silver;
     display: flex;
+
     justify-content: center;
-    align-items: center;
+
     align-content: center;
 }
 
@@ -118,18 +125,18 @@ P {
     height: auto;
 }
 
-/* ecran 3*/
+/* -------------------------------------- ecran 3-----------------------------------------------*/
 .ecran3 {
     display: flex;
     flex-direction: column;
     width: 100%;
-    background-color: #8f89899b;
+    background-color: silver;
     margin: 2px;
     justify-content: flex-start;
 
 }
 
-.h3W{
+.h3W {
     margin: 0;
     font-size: 100px;
     color: #f7f8f8;
@@ -143,6 +150,7 @@ P {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+    border-radius: 0%;
 
 
 }
@@ -150,7 +158,7 @@ P {
 .ecran3 .contained .container {
     display: flex;
     flex-direction: column;
-    background-color: #8f89899b;
+    background-color: silver;
     border-radius: 50%;
     padding: 0 13%;
     margin: 60px 0;
@@ -163,31 +171,55 @@ P {
 
 .ecran3 .contained .container .top h3 {
 
-    font-size: 28px;
+    font-size: 2rem;
+    text-transform: uppercase;
 }
 
-.ecran3 .contained .container .down {
-
-}
-
-/* ecran 4*/
+/* ------------------------------------------------------------ ecran 4-----------------------------------------------*/
 .ecran4 {
     width: 100%;
-    background-color: #8f89899b;
+    background-color: silver;
+    border-radius: 0%;
 }
 
-/* ecran 5*/
+.ecran4 .contained .container .top h3 {
+    font-size: 2rem;
+    text-transform: uppercase;
+
+}
+
+.ecran4 .contained .container .top {
+    display: flex;
+
+}
+
+.ecran4 .contained .container {
+    display: flex;
+    flex-direction: column;
+    background-color: silver;
+    border-radius: 50%;
+    padding: 0 13%;
+    margin: 60px 0;
+}
+
+
+
+/* ------------------------------------------------------------- ecran 5------------------------------------------*/
 .ecran5 {
     width: 100%;
-    background-color: #8f89899b;
+    background-color: silver;
+    flex-direction: column;
+    justify-content: space-around;
+
 }
 
-/* ecran 6*/
+/*  ----------------------------------------------------------------ecran 6--------------------------------------*/
 .ecran6 {
     width: 100%;
     background-color: #8f89899b;
-    /* ecran 7*/
 }
+
+/* -------------------------------------------------------------- ecran 7 -------------------------------------*/
 
 .ecran7 {
     width: 100%;
@@ -195,22 +227,358 @@ P {
 
 }
 
-/*ecran 8*/
+.ecran7 img {
+    display: flex;
+    width: 150px;
+    height: 150px;
+}
+
+/* ------------------------------------------------------------ecran 8------------------------------------------*/
 .ecran8 img {
-    width: 400px;
-    height: 400px;
+    position: absolute;
+    width: 750px;
 }
 
 .ecran8 {
     width: 100%;
-    background-color: #8f89899b;
+    background: linear-gradient(to right, #000 0% , #fff 100%);
     display: flex;
     justify-content: center;
     align-items: center;
     align-content: center;
-
 }
 
+/* -------------------------------------------------- Ajout pour formulaire ------------------------------------ */
+.contain-tout {
+    width: 80%;
+    height: 500px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+}
+
+.form-container {
+    width: 50%;
+    height: 100%;
+}
+
+#contact-form {
+    width: 100%;
+    height: 100%;
+    padding: 50px 50px;
+}
+
+#contact-form div {
+    width: 100%;
+    margin: 20px 0;
+    position: relative;
+}
+
+#contact-form div::before {
+    font-family: FontAwesome;
+    z-index: 2;
+    width: 20px;
+    color: #cccccc;
+    text-align: left;
+    position: absolute;
+    left: 0;
+    top: 10px;
+}
+
+#contact-form div:nth-child(1):before {
+    content: '\f007';
+}
+
+#contact-form div:nth-child(2):before {
+    content: '\f0e0';
+}
+
+#contact-form div:nth-child(3):before {
+    content: '\f3cd';
+}
+
+#contact-form div:nth-child(4) {
+    height: 100px;
+}
+
+#contact-form div:nth-child(4):before {
+    content: '\f075';
+    top: 0;
+}
+
+input,
+textarea {
+    width: 70%;
+    padding: 10px 10px 10px 10px;
+    border: 0;
+    border-bottom: 2px solid #dddddd;
+    background-color: transparent;
+}
+
+label {
+    display: inline-block;
+    width: 22%;
+    padding-left: 30px;
+    color: #cccccc;
+    margin-right: 10px;
+}
+
+#message {
+    position: absolute;
+}
+
+input {
+    height: 40px;
+}
+
+input:focus,
+textarea:focus {
+    border-bottom: 2px solid #01109b;
+    outline: none;
+}
+
+
+/* Voici les règles de mise en forme pour les champs invalides */
+input.invalid {
+    border-color: #900;
+    background-color: #FDD;
+}
+
+input:focus.invalid {
+    outline: none;
+}
+
+/* Voici les règles utilisées pour les messages d'erreur */
+.contain-tout {
+    width: 80%;
+    height: 500px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+}
+
+.form-container {
+    width: 50%;
+    height: 100%;
+}
+
+#contact-form {
+    width: 100%;
+    height: 100%;
+    padding: 50px 50px;
+}
+
+#contact-form div {
+    width: 100%;
+    margin: 20px 0;
+    position: relative;
+}
+
+#contact-form div::before {
+    font-family: FontAwesome;
+    z-index: 2;
+    width: 20px;
+    color: #cccccc;
+    text-align: left;
+    position: absolute;
+    left: 0;
+    top: 10px;
+}
+
+#contact-form div:nth-child(1):before {
+    content: '\f007';
+}
+
+#contact-form div:nth-child(2):before {
+    content: '\f0e0';
+}
+
+#contact-form div:nth-child(3):before {
+    content: '\f3cd';
+}
+
+#contact-form div:nth-child(4) {
+    height: 100px;
+}
+
+#contact-form div:nth-child(4):before {
+    content: '\f075';
+    top: 0;
+}
+
+input,
+textarea {
+    width: 70%;
+    padding: 10px 10px 10px 10px;
+    border: 0;
+    border-bottom: 2px solid #dddddd;
+    background-color: transparent;
+}
+
+label {
+    display: inline-block;
+    width: 22%;
+    padding-left: 30px;
+    color: #cccccc;
+    margin-right: 10px;
+}
+
+#message {
+    position: absolute;
+}
+
+input {
+    height: 40px;
+}
+
+input:focus,
+textarea:focus {
+    border-bottom: 2px solid #01109b;
+    outline: none;
+}
+
+
+/* Voici les règles de mise en forme pour les champs invalides */
+input.invalid {
+    border-color: #900;
+    background-color: #FDD;
+}
+
+input:focus.invalid {
+    outline: none;
+}
+
+/* Voici les règles utilisées pour les messages d'erreur */
+.error {
+    width: 100%;
+    padding: 0;
+
+    font-size: 80%;
+    color: white;
+    background-color: #900;
+    border-radius: 0 0 5px 5px;
+
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+.error.active {
+    padding: 0.3em;
+}
+
+/* fin traitement des erreurs*/
+
+textarea {
+    height: 100px;
+    resize: none;
+}
+
+::placeholder {
+    font-style: italic;
+}
+
+.btn {
+    width: 100%;
+    padding: 0;
+    background: transparent;
+    border: 1px solid #dddddd;
+    transition: 1s;
+    border-radius: 10px;
+    margin-top: 10px;
+}
+
+.btn:hover {
+    border: 1px solid #01109b;
+    background: #01109b;
+    color: #dddddd;
+}
+
+/* Cadre pour message d'envoi */
+#result-form {
+    height: 100px;
+    width: 400px;
+    margin: 60px auto;
+    text-align: center;
+    padding: 30px 20px 30px 20px;
+}
+
+.form-image {
+    width: 50%;
+    height: 100%;
+    position: relative;
+    padding: 50px;
+}
+
+.form-image img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: auto;
+    width: 80%;
+    height: auto;
+}
+
+/* fin traitement des erreurs*/
+
+textarea {
+    height: 100px;
+    resize: none;
+}
+
+::placeholder {
+    font-style: italic;
+}
+
+.btn {
+    width: 100%;
+    padding: 0;
+    background: transparent;
+    border: 1px solid #dddddd;
+    transition: 1s;
+    border-radius: 10px;
+    margin-top: 10px;
+}
+
+.btn:hover {
+    border: 1px solid #01109b;
+    background: #01109b;
+    color: #f2eded;
+}
+
+/* Cadre pour message d'envoi */
+#result-form {
+    height: 100px;
+    width: 400px;
+    margin: 60px auto;
+    text-align: center;
+    padding: 30px 20px 30px 20px;
+}
+
+.form-image {
+    width: 50%;
+    height: 100%;
+    position: relative;
+    padding: 50px;
+}
+
+.form-image img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: auto;
+    width: 80%;
+    height: auto;
+}
+
+/* Fin ajout pour forumlaire */
 
 
 
@@ -220,7 +588,7 @@ P {
 nav {
     height: 100px;
     width: 100%;
-    position: fixed;
+
 }
 
 ul {
@@ -236,13 +604,13 @@ li {
     margin: 0 10px;
 }
 
-h3{
+h3 {
     margin: 0;
     font-size: 100px;
-    color: #424139;
+    color: rgb(216, 13, 13);
     text-shadow: 0 1px 0 #32312b, 0 2px 0 #32312b, 0 3px 0 #32312b,
         0 4px 0 #32312b, 0 5px 0 #32312b, 0 6px 0 #32312b, 0 7px 0 #32312b,
-        0 8px 0 #32312b, 0 9px 0 #32312b, 0 50px 30px rgba(0, 0, 0, 0.8);
+        0 8px 0 #32312b, 0 9px 0 #32312b, 0 50px 30px rgba(0, 0, 0, 0.572);
 }
 
 .white {
@@ -262,6 +630,7 @@ h3{
         0 4px 0 #32312b, 0 5px 0 #32312b, 0 6px 0 #32312b, 0 7px 0 #32312b,
         0 8px 0 #32312b, 0 9px 0 #32312b, 0 50px 30px rgba(0, 0, 0, 0.8);
 }
+
 .red {
     margin: 0;
     font-size: 100px;
@@ -272,15 +641,9 @@ h3{
 }
 
 
-
-
-
-
-
-
-.checkbtn{
+.checkbtn {
     font-size: 30px;
-    color: white;
+    color: rgb(18, 15, 15);
     float: right;
     line-height: 80px;
     margin: 20px 40px auto 0;
@@ -288,65 +651,73 @@ h3{
     display: none;
 }
 
-#check{
-    display:none;
+#check {
+    display: none;
 }
 
-@media (max-width:952px){
-    label.logo{
+@media (max-width:952px) {
+    label.logo {
         font-size: 40px;
         padding-left: 50px;
     }
-    nav ul li a{
+
+    nav ul li a {
         font-size: 16px;
     }
 }
 
 
-@media (max-width:858px){
-    .checkbtn{
+@media (max-width:858px) {
+    .checkbtn {
         display: block;
         text-align: right;
     }
 
-    
-    nav{
+
+    nav {
         padding: 0 20px;
     }
 
-    label.logo{
+    label.logo {
         width: 90%;
         text-align: center;
     }
-    nav ul{
+
+    nav ul {
         display: inline-block;
-        position:fixed;
+        position: fixed;
         width: 100%;
         height: 100vh;
-        background: #96989aaf;
-        top:120px;
+        background: rgb(0, 0, 0);
+        top: 120px;
         left: -100%;
         text-align: center;
         transition: all .5s;
         width: 100%;
         margin: 0;
     }
-    nav ul li{
+
+    nav ul li {
         display: block;
         margin: 50px 0;
         line-height: 30px;
     }
-    nav ul li a{
+
+    nav ul li a {
         font-size: 20px;
     }
-    a:hover,a.active{
+
+    a:hover,
+    a.active {
         background: none;
-        color: #05be4c;
+        color: black;
     }
-    #check:checked ~ ul{
-        left:0;
+
+    #check:checked~ul {
+        left: 0;
     }
-    .photo{
+
+    .photo {
         display: none;
     }
 }
